[RESTEASY-3136] Add JVM arguments for XNIO-404/JDK-8285445 on Windows.
https://issues.redhat.com/browse/RESTEASY-3136
Signed-off-by: James R. Perkins <jperkins@redhat.com>